--- a/config/database.yml
+++ b/config/database.yml
@@ -4,22 +4,33 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode 
+  database: gallery 
   pool: 5
   timeout: 5000
+  username: gallery
+  password: gallery
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  database: gallery_test
+  encoding: unicode 
+  database: gallery 
   pool: 5
   timeout: 5000
+  username: gallery
+  password: gallery
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: gallery_production
+  encoding: unicode 
+  database: gallery 
   pool: 5
   timeout: 5000
+  username: gallery
+  password: gallery
